# lambdish

./: .gitignore  LICENSE  README.md  dune-project  lambdish.opam
.github/workflows/: static.yml
_build/default/web/: index.css  main.js  main.map  main.ml  main.pp.ml
_build/default/web/.main.eobjs/byte/: dune__exe__Main.cmo  dune__exe__Main.cmt  dune__exe__Main.cmti
_build/default/web/.merlin-conf/: exe-main
lib/: dune  interpreter.ml  parser.ml
test/: dune
web/: dune  index.html  main.ml
